# fastapi-stt

./: config.toml  main.py  main_a.py  pyproject.toml  test.py
app/api/: __init__.py
app/api/v1/: __init__.py  stt.py
app/core/: config.py
app/models/: response.py
app/utils/: model.py  speech_to_text.py
