[project]
name = "fastapi-stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctranslate2==4.5.0",
    "fastapi[standard]>=0.115.12",
    "faster-whisper>=1.1.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "soundfile>=0.13.1",
]
